// Defines what the service exposes:
// Messages (data structures) exchanged between client and server
// gRPC service (RPC interface) with methods like PostAccount, GetAccount, GetAccounts
// 1, 2, 3,.. are unique field numbers to identify fields in the serialized (binary) format.
// repeated = zero or more values.

syntax = "proto3"; // follows the proto3 syntax

package pb;

option go_package = "./"; // generate Go files in the current directory.

message Account {
    string id = 1;
    string name = 2;
}

message PostAccountRequest {
    string name = 1;
}

message PostAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    string id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    uint64 skip = 1;
    uint64 take = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

service AccountService {
    rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {
    }
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
    }
    rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse) {
    }
}


